Did a lot of things: Fix annotation missing from override in NamespaceID. Remove redundant scopes already included in broader ones in editorconfig. Trim unused types in editorconfig. Added quotes in pr.yml as the string contained a -. Removed references to MinestomConsoleWriter. Removed redundant suppressions. Replaced "System.getProperty("line.separator")" with System.lineSeparator(). Removed empty methods, ones that are identical to their super and some other dead code. Made EntityProjectileDamage inherit from EntityDamage. Remove some deprecated API usage. Remove some unused characters. Remove unused imports and redundant code. Replace some ifs with switch. Use more pattern variables. Do the java 21 SequencedCollection things. Improve javadocs. Replaced log concatenation with parameterized messages. Simplify math. Make some variables a primitive type. Removed return/continue statements at the end of the function/loop. Improve updatePose and convertToPacketSlot. Improve MergedMap size() efficiency. Do some other things intellij told me to that I forgot about.