@@ -12,7 +12,6 @@ import net.minestom.server.entity.GameMode;
 import net.minestom.server.entity.Player;
 import net.minestom.server.instance.Instance;
 import net.minestom.server.network.ConnectionManager;
-import net.minestom.server.network.ConnectionState;
 import net.minestom.server.utils.MathUtils;
 import net.minestom.server.utils.math.IntRange;
 import net.minestom.server.utils.validate.Check;
@@ -169,12 +168,9 @@ public class EntityFinder {
                         pos.y(), dy))
                     return false;
 
-                if (dz != null && !MathUtils.isBetweenUnordered(
+                return dz == null || MathUtils.isBetweenUnordered(
                         entityPosition.z(),
-                        pos.z(), dz))
-                    return false;
-
-                return true;
+                        pos.z(), dz);
             }).toList();
         }
 
@@ -274,7 +270,7 @@ public class EntityFinder {
 
     public @Nullable Entity findFirstEntity(@Nullable Instance instance, @Nullable Entity self) {
         final List<Entity> entities = find(instance, self);
-        return entities.isEmpty() ? null : entities.get(0);
+        return entities.isEmpty() ? null : entities.getFirst();
     }
 
     public @Nullable Entity findFirstEntity(@NotNull CommandSender sender) {
