@@ -5,7 +5,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public final class URLUtils {
 
@@ -13,8 +14,8 @@ public final class URLUtils {
 
     }
 
-    public static String getText(String url) throws IOException {
-        HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+    public static String getText(String url) throws IOException, URISyntaxException {
+        HttpURLConnection connection = (HttpURLConnection) new URI(url).toURL().openConnection();
         //add headers to the connection, or check the status if desired..
 
         // handle error response code it occurs
