@@ -1,10 +1,10 @@
 package net.minestom.server.entity;
 
+import net.minestom.server.coordinate.Pos;
 import net.minestom.server.network.packet.server.play.SetPassengersPacket;
 import net.minestom.server.network.packet.server.play.SpawnEntityPacket;
 import net.minestom.testing.Env;
 import net.minestom.testing.EnvTest;
-import net.minestom.server.coordinate.Pos;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -72,7 +72,7 @@ public class PassengerIntegrationTest {
         var passengerPackets = passengerTracker.collect();
         for (int i = 0; i < passengerPackets.size(); i++) {
             // Passenger packet order will be sent backwards down the chain of passenger vehicles
-            assertEquals(startingId - i, passengerPackets.get(i).passengersId().get(0));
+            assertEquals(startingId - i, passengerPackets.get(i).passengersId().getFirst());
         }
 
         // Ensure spawn packets are never sent more than once per entity
