@@ -28,7 +28,7 @@ public @interface EnvTest {
         @Override
         public void interceptTestMethod(Invocation<Void> invocation, ReflectiveInvocationContext<Method> invocationContext, ExtensionContext extensionContext) throws Throwable {
             invocation.proceed();
-            EnvImpl env = (EnvImpl) invocationContext.getArguments().get(0);
+            EnvImpl env = (EnvImpl) invocationContext.getArguments().getFirst();
             env.cleanup();
         }
     }
